--- a/rt/pom.xml
+++ b/rt/pom.xml
@@ -27,6 +27,17 @@
   		<artifactId>com.springsource.javax.media.jai.core</artifactId>
   		<version>1.1.3</version>
   	</dependency>
+	<dependency>
+  		<groupId>junit</groupId>
+  		<artifactId>junit</artifactId>
+  		<version>4.12</version>
+  		<scope>test</scope>
+	</dependency>
+      <dependency>
+          <groupId>junit</groupId>
+          <artifactId>junit</artifactId>
+          <version>4.10</version>
+      </dependency>
   </dependencies>
   <repositories>
     <repository>
